--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 body {
+
+    box-sizing: border-box;
+    margin: 0px;
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    width: 100%;
     height: 100vh;
     margin: 0;
     color: #FFFF00;
     background-color: #030018;
+    /* transform: skewX(50deg);
+    transform-origin: 40%;
+    transform: skewX(-50deg);
+    transform-origin: 60%; */
 }
 
 .stars {
@@ -14,13 +19,22 @@ body {
 }
 
 img {
-    width: 60vh;
+    width: 30vh;
 }
 
 main {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-items: center;
     align-items: center;
+    perspective: 70;
+}
+
+.container {
+    text-align: center;
+    font-size: xx-large;
+    transform-style: preserve-3d;
+    transform: rotateX(65deg);
 }
 
 .desc {
