--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .astra {
-    background: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/1231630/stars.png) #030018;
+    background: url(astra.jpg) #030018;
 }
 
 img {
@@ -28,7 +28,6 @@ main {
     justify-items: center;
     align-items: center;
     perspective: 70vw;
-
 }
 
 .container {
